# ToolBox

./: .cursorrules  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflow/: docker-build.yml
.github/workflows/: docker-build.yml
bilibili/: bili2cubox.py  requirements.txt
finance/: config.py  etf_backtest.py  fetcher.py  logger.py  mail.template  mail_sender.py  message_builder.py  test.py
finance/notifiers/: bark.py  base.py  mail.py  wecom.py
notion/: .env.example  auto_update_stock.py  auto_update_subscription.py  requirements.txt
slack/: .env.example  forward_slack_2_weworkbot.py  requirements.txt
trading/: .env.example  README.md  __init__.py  analyzers.py  backtest.py  csvfilter.py  db.py  fetcher.py  next.config.js  notify.py  push.sql  pyproject.toml  utils.py
trading/frontend/trading/: .gitignore  deploy_to_worker.sh  next.config.js  package-lock.json  package.json  tsconfig.json  wrangler.toml
trading/frontend/trading/app/: layout.tsx  page.tsx
trading/frontend/trading/app/api/quantTradeData/: route.ts
trading/frontend/trading/app/api/reports/: route.ts
trading/frontend/trading/app/api/trade-data/: route.ts
trading/frontend/trading/components/: GoogleAnalytics.tsx  QuantTradeReport.tsx  quant-trade-report.tsx
trading/frontend/trading/components/ui/: badge.tsx  button.tsx
trading/frontend/trading/src/: index.ts
trading/frontend/trading/utils/: buildInfo.ts  config.ts  formatDate.ts  formatMoney.ts
trading/frontend/trading/workers-site/: index.js  index.ts
trading/templates/: backtest_report.html
zotero/: gmail_stork_parser.py  zotero_manager.py  zotero_tagger.py
