[project]
name = "toolbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "adata>=2.8.2",
    "backtrader>=1.9.78.123",
    "feedparser>=6.0.11",
    "jinja2>=3.1.4",
    "loguru>=0.7.2",
    "matplotlib>=3.7.5",
    "mini-racer>=0.12.4",
    "notion-client>=2.2.1",
    "pandas>=2.0.3",
    "prettytable>=3.11.0",
    "pymysql>=1.1.1",
    "python-dotenv>=1.0.1",
    "pyzotero>=1.5.25",
    "requests[socks]>=2.32.3",
    "sqlalchemy>=2.0.36",
    "tabulate>=0.9.0",
    "tenacity>=9.0.0",
    "tqdm>=4.67.0",
    "yfinance>=0.2.48",
]
